--- a/src/app/egypt/egypt.component.html
+++ b/src/app/egypt/egypt.component.html
@@ -4,9 +4,9 @@
       <div class="card">
         <img class="card-img-top" [src]="n.urlToImage" alt="">
         <div class="card-body">
-          <h5 class="card-title">{{n.title}}</h5>
-          <p class="card-text">{{n.description }}</p>
-          <a [routerLink]="['/details',x]" class="btn btn-primary">اقرأ المزيد</a>
+          <h5 class="card-title">{{n.first_name}}</h5>
+          <p class="card-text">{{n.last_name }}</p>
+          <!--<a [routerLink]="['/details',x]" class="btn btn-primary">اقرأ المزيد</a>-->
         </div>
       </div>
     </div>
